package behavioral.chain_of_respon.atm.bt_CA6;

public class DashBoard {

}
